# llm_router

./: .env.example  .env.test  .gitignore  Bonus.md  Dockerfile  LLM-Router.postman_collection.json  README.md  ROUTING_STRATEGY.md  classifier_keywords.yaml  docker-compose.yml  providers.yaml  pyproject.toml  replit.md  requirements.txt
app/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py  models.py
app/api/: __init__.py  analytics.py  chat.py  health.py  providers.py
app/providers/: base.py  factory.py  google.py  openai.py
app/routing/: circuit_breaker.py  classifier.py  metrics.py  strategy.py
app/services/: __init__.py  router_service.py
app/storage/: memory.py
tests/: conftest.py  test_api.py  test_budget.py  test_circuit_breaker.py  test_integration.py  test_memory.py  test_models.py  test_strategy.py
